# trajectory-vis

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  ellips_trajectoryConfig.cmake  ellipsoid-trajectory-vis.pj  ellipsoid-trajectory-vis.sublime-project  launch.sh  literature.md  run_plugin.sh.in  trajectory-vis.pj  trajectory-vis.sublime-project  trajectory_visConfig.cmake
include/: data.h  ellipsoid_instanced_renderer.h  lighting.h  math_utils.h  metatube.h  plugin.h  traj_line_renderer.h  traj_ribbon_3d_renderer.h  traj_ribbon_3d_renderer_gpu.h  traj_ribbon_renderer.h  traj_tube_renderer.h  traj_velocity_renderer.h  types.h  view_projection.h
shader/: traj_ellipsoid_shader.glfs  traj_ellipsoid_shader.glpr  traj_ellipsoid_shader.glvs  traj_light.glsl  traj_line_shader.glfs  traj_line_shader.glpr  traj_line_shader.glvs  traj_math.glsl  traj_ribbon_3d_gpu_shader.glfs  traj_ribbon_3d_gpu_shader.glgs  traj_ribbon_3d_gpu_shader.glpr  traj_ribbon_3d_gpu_shader.glvs  traj_ribbon_3d_shader.glfs  traj_ribbon_3d_shader.glpr  traj_ribbon_3d_shader.glvs  traj_ribbon_shader.glfs  traj_ribbon_shader.glpr  traj_ribbon_shader.glvs  traj_tube_shader.glfs  traj_tube_shader.glpr  traj_tube_shader.glvs  traj_velocity_shader.glfs  traj_velocity_shader.glgs  traj_velocity_shader.glpr  traj_velocity_shader.glvs
src/: CMakeLists.txt  data.cxx  ellipsoid_instanced_renderer.cxx  lighting.cxx  math_utils.cxx  plugin.cxx  traj_line_renderer.cxx  traj_ribbon_3d_renderer.cxx  traj_ribbon_3d_renderer_gpu.cxx  traj_ribbon_renderer.cxx  traj_tube_renderer.cxx  traj_velocity_renderer.cxx  view_projection.cxx
